fix: добавлена обработка ошибки расшифрования записей
